cmake_minimum_required(VERSION 3.5)

project(method-chaining-cpp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(method-chaining-cpp main.cpp)

include(GNUInstallDirs)
install(TARGETS method-chaining-cpp
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
